concertados os links de imagens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             src="https://kit.fontawesome.com/58595e1ad2.js"
             crossorigin="anonymous"
         ></script>
-        <link rel="stylesheet" href="/src/css/style.css" />
+        <link rel="stylesheet" href="src/css/style.css" />
         <title>Heiko hotel</title>
     </head>
     <body>
